--- a/src/app/video-games/header/header.component.scss
+++ b/src/app/video-games/header/header.component.scss
@@ -35,7 +35,7 @@
   
         a.active-link .nav-bg-text {
           color: rgba(255, 255, 255, 0.1);
-          filter: blur(1px);
+          // filter: blur(1px);
         }
       }
     }
