--- a/src/app/video-games/video-games.component.html
+++ b/src/app/video-games/video-games.component.html
@@ -1,9 +1,13 @@
 <app-header></app-header>
 <div class="page-container page-wrapper">
   <aside class="filters">
-  <app-filter-sidebar class="sidebar"></app-filter-sidebar>
+    <app-filter-sidebar
+      (filtersChanged)="onFiltersApplied($event)"
+      (filtersCleared)="onFiltersCleared()"
+    ></app-filter-sidebar>
   </aside>
+
   <section class="game-list">
-  <app-game-list class="main-content"></app-game-list>
+    <app-game-list [filters]="filters"></app-game-list>
   </section>
 </div>
