--- a/src/app/video-games/contact/contact.component.html
+++ b/src/app/video-games/contact/contact.component.html
@@ -13,18 +13,18 @@
       <form class="contact-form">
         <div class="form-row">
           <mat-form-field appearance="fill">
-            <mat-label>Name *</mat-label>
+            <mat-label>Name </mat-label>
             <input matInput required />
           </mat-form-field>
   
           <mat-form-field appearance="fill">
-            <mat-label>Email Address *</mat-label>
+            <mat-label>Email Address </mat-label>
             <input matInput type="email" required />
           </mat-form-field>
         </div>
   
         <mat-form-field appearance="fill" class="full-width">
-          <mat-label>Message *</mat-label>
+          <mat-label>Message </mat-label>
           <textarea matInput rows="5" required></textarea>
         </mat-form-field>
   
